--- a/style2.css
+++ b/style2.css
@@ -111,15 +111,15 @@ body{
 /*Make the placeholder text lighter in color so that users know to fill it*/
 
 .form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  opacity: 0.8; /* Firefox */
+  opacity: 0.6; /* Firefox */
 }
 
 .form-control:-ms-input-placeholder { /* Internet Explorer 10-11 */
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 .form-control::-ms-input-placeholder { /* Microsoft Edge */
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 
